minor changes, enable homepage recipe drawing
